# socket-wrapper

./: LICENSE  README.md  client.py  pylint.toml  pyproject.toml  server.py  setup.cfg  setup.py  unixclient.py  unixserver.py
socket_wrapper/: __init__.py  _base.py  _unixclient.py  _unixserver.py  client.py  errors.py  server.py  typings.py  utils.py
