[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "socket_wrapper"
description = "Random socket wrapper"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["socket_wrapper"]
