[metadata]
name = socket_wrapper
version = attr: socket_wrapper.__version__
license_files = LICENSE
url = https://github.com/RimuEirnarn/socket_wrapper
author = RimuEirnarn
author_email = rimuru720@proton.me
description = Random socket wrapper
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/RimuEirnarn/socket_wrapper

[options]
packages = socket_wrapper
python_require = >= 3.11
